// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HierarchicalMenu renders markup with state 1`] = `
<ng-component
  testedWidget={[Function NgAisHierarchicalMenu]}
>
  
        <ng-ais-instantsearch>
    
          
    <ng-ais-hierarchical-menu>
      
      
      
      <div
        class="ais-HierarchicalMenu"
      >
        
        
        <ul
          class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--lvl0"
        >
          
          
          
          <ng-ais-hierarchical-menu-item
            ng-reflect-create-u-r-l="function () {
          return f"
            ng-reflect-item="[object Object]"
            ng-reflect-refine="function () {
          return f"
          >
            
      
            <li
              class="ais-HierarchicalMenu-item"
            >
              
        
              <a
                class="ais-HierarchicalMenu-link"
                href=""
              >
                
          
                <span
                  class="ais-HierarchicalMenu-label"
                >
                  one
                </span>
                
          
                <span
                  class="ais-HierarchicalMenu-count"
                >
                  100
                </span>
                
        
              </a>
              
  
        
              
              
      
            </li>
            
    
          </ng-ais-hierarchical-menu-item>
          <ng-ais-hierarchical-menu-item
            ng-reflect-create-u-r-l="function () {
          return f"
            ng-reflect-item="[object Object]"
            ng-reflect-refine="function () {
          return f"
          >
            
      
            <li
              class="ais-HierarchicalMenu-item ais-HierarchicalMenu-item--selected ais-HierarchicalMenu-item--parent"
            >
              
        
              <a
                class="ais-HierarchicalMenu-link"
                href=""
              >
                
          
                <span
                  class="ais-HierarchicalMenu-label"
                >
                  two
                </span>
                
          
                <span
                  class="ais-HierarchicalMenu-count"
                >
                  100
                </span>
                
        
              </a>
              
  
        
              
              <ul
                class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--child ais-HierarchicalMenu-list--lvl1"
              >
                
          
                
                <ng-ais-hierarchical-menu-item
                  ng-reflect-create-u-r-l="function () {
          return f"
                  ng-reflect-item="[object Object]"
                  ng-reflect-lvl="2"
                  ng-reflect-refine="function () {
          return f"
                >
                  
      
                  <li
                    class="ais-HierarchicalMenu-item"
                  >
                    
        
                    <a
                      class="ais-HierarchicalMenu-link"
                      href=""
                    >
                      
          
                      <span
                        class="ais-HierarchicalMenu-label"
                      >
                        six
                      </span>
                      
          
                      <span
                        class="ais-HierarchicalMenu-count"
                      >
                        100
                      </span>
                      
        
                    </a>
                    
  
        
                    
                    
      
                  </li>
                  
    
                </ng-ais-hierarchical-menu-item>
                <ng-ais-hierarchical-menu-item
                  ng-reflect-create-u-r-l="function () {
          return f"
                  ng-reflect-item="[object Object]"
                  ng-reflect-lvl="2"
                  ng-reflect-refine="function () {
          return f"
                >
                  
      
                  <li
                    class="ais-HierarchicalMenu-item"
                  >
                    
        
                    <a
                      class="ais-HierarchicalMenu-link"
                      href=""
                    >
                      
          
                      <span
                        class="ais-HierarchicalMenu-label"
                      >
                        seven
                      </span>
                      
          
                      <span
                        class="ais-HierarchicalMenu-count"
                      >
                        100
                      </span>
                      
        
                    </a>
                    
  
        
                    
                    
      
                  </li>
                  
    
                </ng-ais-hierarchical-menu-item>
                <ng-ais-hierarchical-menu-item
                  ng-reflect-create-u-r-l="function () {
          return f"
                  ng-reflect-item="[object Object]"
                  ng-reflect-lvl="2"
                  ng-reflect-refine="function () {
          return f"
                >
                  
      
                  <li
                    class="ais-HierarchicalMenu-item"
                  >
                    
        
                    <a
                      class="ais-HierarchicalMenu-link"
                      href=""
                    >
                      
          
                      <span
                        class="ais-HierarchicalMenu-label"
                      >
                        eight
                      </span>
                      
          
                      <span
                        class="ais-HierarchicalMenu-count"
                      >
                        100
                      </span>
                      
        
                    </a>
                    
  
        
                    
                    
      
                  </li>
                  
    
                </ng-ais-hierarchical-menu-item>
                <ng-ais-hierarchical-menu-item
                  ng-reflect-create-u-r-l="function () {
          return f"
                  ng-reflect-item="[object Object]"
                  ng-reflect-lvl="2"
                  ng-reflect-refine="function () {
          return f"
                >
                  
      
                  <li
                    class="ais-HierarchicalMenu-item"
                  >
                    
        
                    <a
                      class="ais-HierarchicalMenu-link"
                      href=""
                    >
                      
          
                      <span
                        class="ais-HierarchicalMenu-label"
                      >
                        nine
                      </span>
                      
          
                      <span
                        class="ais-HierarchicalMenu-count"
                      >
                        100
                      </span>
                      
        
                    </a>
                    
  
        
                    
                    
      
                  </li>
                  
    
                </ng-ais-hierarchical-menu-item>
                
        
              </ul>
              
      
            </li>
            
    
          </ng-ais-hierarchical-menu-item>
          <ng-ais-hierarchical-menu-item
            ng-reflect-create-u-r-l="function () {
          return f"
            ng-reflect-item="[object Object]"
            ng-reflect-refine="function () {
          return f"
          >
            
      
            <li
              class="ais-HierarchicalMenu-item"
            >
              
        
              <a
                class="ais-HierarchicalMenu-link"
                href=""
              >
                
          
                <span
                  class="ais-HierarchicalMenu-label"
                >
                  three
                </span>
                
          
                <span
                  class="ais-HierarchicalMenu-count"
                >
                  100
                </span>
                
        
              </a>
              
  
        
              
              
      
            </li>
            
    
          </ng-ais-hierarchical-menu-item>
          <ng-ais-hierarchical-menu-item
            ng-reflect-create-u-r-l="function () {
          return f"
            ng-reflect-item="[object Object]"
            ng-reflect-refine="function () {
          return f"
          >
            
      
            <li
              class="ais-HierarchicalMenu-item"
            >
              
        
              <a
                class="ais-HierarchicalMenu-link"
                href=""
              >
                
          
                <span
                  class="ais-HierarchicalMenu-label"
                >
                  four
                </span>
                
          
                <span
                  class="ais-HierarchicalMenu-count"
                >
                  100
                </span>
                
        
              </a>
              
  
        
              
              
      
            </li>
            
    
          </ng-ais-hierarchical-menu-item>
          <ng-ais-hierarchical-menu-item
            ng-reflect-create-u-r-l="function () {
          return f"
            ng-reflect-item="[object Object]"
            ng-reflect-refine="function () {
          return f"
          >
            
      
            <li
              class="ais-HierarchicalMenu-item"
            >
              
        
              <a
                class="ais-HierarchicalMenu-link"
                href=""
              >
                
          
                <span
                  class="ais-HierarchicalMenu-label"
                >
                  five
                </span>
                
          
                <span
                  class="ais-HierarchicalMenu-count"
                >
                  100
                </span>
                
        
              </a>
              
  
        
              
              
      
            </li>
            
    
          </ng-ais-hierarchical-menu-item>
          
        
        </ul>
        
      
      </div>
      
    
    </ng-ais-hierarchical-menu>
    
        
  </ng-ais-instantsearch>
      
</ng-component>
`;

exports[`HierarchicalMenu renders markup without state 1`] = `
<ng-component
  testedWidget={[Function NgAisHierarchicalMenu]}
>
  
        <ng-ais-instantsearch>
    
          
    <ng-ais-hierarchical-menu>
      
      
      
      <div
        class="ais-HierarchicalMenu"
      >
        
        
        <ul
          class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--lvl0"
        >
          
          
          
          
        
        </ul>
        
      
      </div>
      
    
    </ng-ais-hierarchical-menu>
    
        
  </ng-ais-instantsearch>
      
</ng-component>
`;

exports[`HierarchicalMenu should apply \`transformItems\` if specified 1`] = `
<ng-component
  testedWidget={[Function NgAisHierarchicalMenu]}
>
  
        <ng-ais-instantsearch>
    
          
    <ng-ais-hierarchical-menu>
      
      
      
      <div
        class="ais-HierarchicalMenu"
      >
        
        
        <ul
          class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--lvl0"
        >
          
          
          
          <ng-ais-hierarchical-menu-item
            ng-reflect-create-u-r-l="function () {
          return f"
            ng-reflect-item="[object Object]"
            ng-reflect-refine="function () {
          return f"
          >
            
      
            <li
              class="ais-HierarchicalMenu-item"
            >
              
        
              <a
                class="ais-HierarchicalMenu-link"
                href=""
              >
                
          
                <span
                  class="ais-HierarchicalMenu-label"
                >
                  foo - one
                </span>
                
          
                <span
                  class="ais-HierarchicalMenu-count"
                >
                  100
                </span>
                
        
              </a>
              
  
        
              
              
      
            </li>
            
    
          </ng-ais-hierarchical-menu-item>
          <ng-ais-hierarchical-menu-item
            ng-reflect-create-u-r-l="function () {
          return f"
            ng-reflect-item="[object Object]"
            ng-reflect-refine="function () {
          return f"
          >
            
      
            <li
              class="ais-HierarchicalMenu-item ais-HierarchicalMenu-item--selected ais-HierarchicalMenu-item--parent"
            >
              
        
              <a
                class="ais-HierarchicalMenu-link"
                href=""
              >
                
          
                <span
                  class="ais-HierarchicalMenu-label"
                >
                  foo - two
                </span>
                
          
                <span
                  class="ais-HierarchicalMenu-count"
                >
                  100
                </span>
                
        
              </a>
              
  
        
              
              <ul
                class="ais-HierarchicalMenu-list ais-HierarchicalMenu-list--child ais-HierarchicalMenu-list--lvl1"
              >
                
          
                
                <ng-ais-hierarchical-menu-item
                  ng-reflect-create-u-r-l="function () {
          return f"
                  ng-reflect-item="[object Object]"
                  ng-reflect-lvl="2"
                  ng-reflect-refine="function () {
          return f"
                >
                  
      
                  <li
                    class="ais-HierarchicalMenu-item"
                  >
                    
        
                    <a
                      class="ais-HierarchicalMenu-link"
                      href=""
                    >
                      
          
                      <span
                        class="ais-HierarchicalMenu-label"
                      >
                        foo - six
                      </span>
                      
          
                      <span
                        class="ais-HierarchicalMenu-count"
                      >
                        100
                      </span>
                      
        
                    </a>
                    
  
        
                    
                    
      
                  </li>
                  
    
                </ng-ais-hierarchical-menu-item>
                <ng-ais-hierarchical-menu-item
                  ng-reflect-create-u-r-l="function () {
          return f"
                  ng-reflect-item="[object Object]"
                  ng-reflect-lvl="2"
                  ng-reflect-refine="function () {
          return f"
                >
                  
      
                  <li
                    class="ais-HierarchicalMenu-item"
                  >
                    
        
                    <a
                      class="ais-HierarchicalMenu-link"
                      href=""
                    >
                      
          
                      <span
                        class="ais-HierarchicalMenu-label"
                      >
                        foo - seven
                      </span>
                      
          
                      <span
                        class="ais-HierarchicalMenu-count"
                      >
                        100
                      </span>
                      
        
                    </a>
                    
  
        
                    
                    
      
                  </li>
                  
    
                </ng-ais-hierarchical-menu-item>
                <ng-ais-hierarchical-menu-item
                  ng-reflect-create-u-r-l="function () {
          return f"
                  ng-reflect-item="[object Object]"
                  ng-reflect-lvl="2"
                  ng-reflect-refine="function () {
          return f"
                >
                  
      
                  <li
                    class="ais-HierarchicalMenu-item"
                  >
                    
        
                    <a
                      class="ais-HierarchicalMenu-link"
                      href=""
                    >
                      
          
                      <span
                        class="ais-HierarchicalMenu-label"
                      >
                        foo - eight
                      </span>
                      
          
                      <span
                        class="ais-HierarchicalMenu-count"
                      >
                        100
                      </span>
                      
        
                    </a>
                    
  
        
                    
                    
      
                  </li>
                  
    
                </ng-ais-hierarchical-menu-item>
                <ng-ais-hierarchical-menu-item
                  ng-reflect-create-u-r-l="function () {
          return f"
                  ng-reflect-item="[object Object]"
                  ng-reflect-lvl="2"
                  ng-reflect-refine="function () {
          return f"
                >
                  
      
                  <li
                    class="ais-HierarchicalMenu-item"
                  >
                    
        
                    <a
                      class="ais-HierarchicalMenu-link"
                      href=""
                    >
                      
          
                      <span
                        class="ais-HierarchicalMenu-label"
                      >
                        foo - nine
                      </span>
                      
          
                      <span
                        class="ais-HierarchicalMenu-count"
                      >
                        100
                      </span>
                      
        
                    </a>
                    
  
        
                    
                    
      
                  </li>
                  
    
                </ng-ais-hierarchical-menu-item>
                
        
              </ul>
              
      
            </li>
            
    
          </ng-ais-hierarchical-menu-item>
          <ng-ais-hierarchical-menu-item
            ng-reflect-create-u-r-l="function () {
          return f"
            ng-reflect-item="[object Object]"
            ng-reflect-refine="function () {
          return f"
          >
            
      
            <li
              class="ais-HierarchicalMenu-item"
            >
              
        
              <a
                class="ais-HierarchicalMenu-link"
                href=""
              >
                
          
                <span
                  class="ais-HierarchicalMenu-label"
                >
                  foo - three
                </span>
                
          
                <span
                  class="ais-HierarchicalMenu-count"
                >
                  100
                </span>
                
        
              </a>
              
  
        
              
              
      
            </li>
            
    
          </ng-ais-hierarchical-menu-item>
          <ng-ais-hierarchical-menu-item
            ng-reflect-create-u-r-l="function () {
          return f"
            ng-reflect-item="[object Object]"
            ng-reflect-refine="function () {
          return f"
          >
            
      
            <li
              class="ais-HierarchicalMenu-item"
            >
              
        
              <a
                class="ais-HierarchicalMenu-link"
                href=""
              >
                
          
                <span
                  class="ais-HierarchicalMenu-label"
                >
                  foo - four
                </span>
                
          
                <span
                  class="ais-HierarchicalMenu-count"
                >
                  100
                </span>
                
        
              </a>
              
  
        
              
              
      
            </li>
            
    
          </ng-ais-hierarchical-menu-item>
          <ng-ais-hierarchical-menu-item
            ng-reflect-create-u-r-l="function () {
          return f"
            ng-reflect-item="[object Object]"
            ng-reflect-refine="function () {
          return f"
          >
            
      
            <li
              class="ais-HierarchicalMenu-item"
            >
              
        
              <a
                class="ais-HierarchicalMenu-link"
                href=""
              >
                
          
                <span
                  class="ais-HierarchicalMenu-label"
                >
                  foo - five
                </span>
                
          
                <span
                  class="ais-HierarchicalMenu-count"
                >
                  100
                </span>
                
        
              </a>
              
  
        
              
              
      
            </li>
            
    
          </ng-ais-hierarchical-menu-item>
          
        
        </ul>
        
      
      </div>
      
    
    </ng-ais-hierarchical-menu>
    
        
  </ng-ais-instantsearch>
      
</ng-component>
`;

exports[`HierarchicalMenu should be hidden with \`autoHideContainer\` 1`] = `
<ng-component
  testedWidget={[Function NgAisHierarchicalMenu]}
>
  
        <ng-ais-instantsearch>
    
          
    <ng-ais-hierarchical-menu>
      
      
      
      
    
    </ng-ais-hierarchical-menu>
    
        
  </ng-ais-instantsearch>
      
</ng-component>
`;
